--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.3.4",
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.4",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.7",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
