--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "json-server --watch server/db.json --port 5000"
   },
   "dependencies": {
     "@primevue/themes": "^4.3.4",
@@ -32,6 +33,7 @@
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
+    "json-server": "^1.0.0-beta.3",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
     "prettier": "3.5.3",
