--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@primevue/themes": "^4.3.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "pinia": "^3.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
