--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.3.4",
+    "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "pinia": "^3.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
+    "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.7",
     "vue-router": "^4.5.0"
