--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.6",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.7",
     "vue-router": "^4.5.0"
