--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "json-server-auth": "^2.1.0",
     "pinia": "^3.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
@@ -37,7 +38,7 @@
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "0.17.4",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
     "prettier": "3.5.3",
