--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.1",
+    "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
+    "primevue": "^4.3.4",
+    "tailwindcss": "^4.1.6",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
