--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.6",
     "tailwindcss-primeui": "^0.6.1",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.7",
     "vue-router": "^4.5.0"
